<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/d_tvVisibleStock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/VisibleStock"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/tvSample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SellingSim"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/spnSellingSim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/sellingsim" />

    <LinearLayout
        android:id="@+id/llVisbleSims"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/GP"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/d_etStockSim_GP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxLength="6" >

        </EditText>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TM"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/d_etStockSim_TM"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxLength="6" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/AbsCbn"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/etStockSim_Abscbn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxLength="6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Smart"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/d_etStockSim_Sm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxLength="6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TnT"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/d_etStockSim_TnT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxLength="6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sun"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <EditText
            android:id="@+id/d_etStockSim_Sun"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:maxLength="6" />

    </LinearLayout>

</LinearLayout>