<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools" >

    <TextView
        android:id="@+id/tvSample"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Chain_Account_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ChainAccStoreName"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <Spinner
        android:id="@+id/spnStoreName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="3dp"
        android:layout_margin="3dp"
        android:background="#444" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0,1" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            tools:ignore="UselessParent"
            >

            <Button
                android:id="@+id/btnSend_CA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onSend"
                android:text="@string/Send" />

            <Button
                android:id="@+id/btnCancel_CA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCancel"
                android:text="@string/Cancel" />

        </TableRow>
    </TableLayout>

</LinearLayout>
